<?xml version="1.0"?>
<package format="2">
  <name>rosasio</name>
  <version>0.1.0</version>
  <description>An async re-implementation of ros_comm (the C++ ros client library) using Boost ASIO</description>
  <maintainer email="stevegolton@gmail.com">Steve Golton</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>libxmlrpc-c++</depend>
  <depend>boost</depend>

  <export>
  </export>
</package>
